<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom"
        app:layout_constraintBottom_toTopOf="@id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintVertical_weight="0.4">

        <TableRow
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="bottom|end">

            <TextView
                android:id="@+id/displayExpression"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:text="@string/txtNum0"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="bottom|end">

            <TextView
                android:id="@+id/displayResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:text="@string/txtNum0"
                android:textSize="100sp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:shrinkColumns="0,1,2,3"
        android:stretchColumns="0,1,2,3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_weight="0.6">

        <TableRow
            android:id="@+id/bar1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1">

            <Button
                android:id="@+id/btnOpClr"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtOpClr"
                android:visibility="visible"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnOpDiv"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtOpDiv"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnOpSign"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtOpSign"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnOpMult"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtOpMult"
                tools:layout_margin="5dp" />

        </TableRow>

        <TableRow
            android:id="@+id/bar2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1">

            <Button
                android:id="@+id/btnNum1"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtNum1"
                android:visibility="visible"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnNum2"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtNum2"
                android:visibility="visible"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnNum3"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtNum3"
                android:visibility="visible"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnOpSub"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtOpSub"
                tools:layout_margin="5dp" />

        </TableRow>

        <TableRow
            android:id="@+id/bar3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1">

            <Button
                android:id="@+id/btnNum4"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtNum4"
                android:visibility="visible"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnNum5"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtNum5"
                android:visibility="visible"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnNum6"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtNum6"
                android:visibility="visible"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnOpAdd"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtOpAdd"
                tools:layout_margin="5dp" />

        </TableRow>

        <TableRow
            android:id="@+id/bar4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1">

            <Button
                android:id="@+id/btnNum7"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtNum7"
                android:visibility="visible"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnNum8"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtNum8"
                android:visibility="visible"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnNum9"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtNum9"
                android:visibility="visible"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnOpDel"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtOpDel"
                tools:layout_margin="5dp" />

        </TableRow>

        <TableRow
            android:id="@+id/bar5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1">

            <Button
                android:id="@+id/btnOpDec"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtOpDec"
                android:visibility="visible"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnNum0"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtNum0"
                tools:layout_margin="5dp" />

            <Button
                android:id="@+id/btnOpCalc"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/txtOpCalc"
                tools:layout_margin="5dp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>